# snaketmpl

./: LICENSE  README.md  Snakefile  __init__.py   entrypoint.py  pyproject.toml  requirements.txt  setup.py
configs/: configuser.yaml  default.yaml
envs/: wordcloud.yaml
scripts/: getarticle.py  getplot.py  getshape.py
