[tool.poetry]
name = "snaketmpl"
version = "0.1.0"
description = "A template for snakemake workflow."
authors = ["NajlaBH"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
